# new_hand_shank

./: README.md
手柄代码/: CMakeLists.txt  GF32F303RCTx_FLASH.ld  startup_gd32f30x_hd.s
手柄代码/CMakeFile/: CMakeCache.txt  GD32F303.elf  GD32F303.hex  GD32F303.map  Makefile  cmake_install.cmake
手柄代码/Core/: core_cm4.h
手柄代码/Device_Drivers_Layer/: battery_testing_drv.cpp  battery_testing_drv.h  button_drv.cpp  button_drv.h  remote_pole_dev.cpp  remote_pole_dev.h  st7789_drv.cpp  st7789_drv.h
手柄代码/Device_Drivers_Layer/Flash/: W25Q.cpp  W25Q.h  flash_base.cpp  flash_base.h
手柄代码/Device_Drivers_Layer/si24r1/: si24r1_drv.cpp  si24r1_drv.h  si24r1_master_drv.cpp  si24r1_master_drv.h  si24r1_slave_drv.cpp  si24r1_slave_drv.h
手柄代码/FatFS/: diskio.c  diskio.h  ff.c  ff.h  ffconf.h
手柄代码/FreeRTOS/Source/: tasks.c
手柄代码/FreeRTOS/Source/CMSIS_RTOS_V2/: cmsis_os.h
手柄代码/FreeRTOS/Source/include/: FreeRTOSConfig.h
手柄代码/FreeRTOS/Source/portable/GCC/ARM_CM4F/: port.c
手柄代码/FreeRTOS/Source/portable/MemMang/: heap_4.c
手柄代码/GD32F30x_standard_peripheral/Include/: gd32f30x_gpio.h
手柄代码/Hardware_Abstraction_Layer/: adc_hal.cpp  adc_hal.h  dma_hal.cpp  dma_hal.h  exti_hal.cpp  exti_hal.h  gpio_hal.cpp  gpio_hal.h  pwm_hal.cpp  pwm_hal.h  spi_hal.cpp  spi_hal.h  timer_hal.cpp  timer_hal.h  usart_hal.cpp  usart_hal.h
手柄代码/Software/Include/: RingBuffer.h  System_time.h
手柄代码/Software/Source/: System_time.c
手柄代码/Startup/: gd32f30x.h  gd32f30x_it.c  system_gd32f30x.c
手柄代码/USB/msc_udisk/inc/: usbd_conf.h
手柄代码/USB/msc_udisk/src/: msc_mem.c
手柄代码/USER/: gd32f30x_libopt.h  main.c  main.cpp  main.h  remote_control_gui.cpp  remote_control_gui.h
手柄代码/lvgl/: lv_conf.h
手柄代码/lvgl/lvgl/: lvgl.h
手柄代码/lvgl/lvgl/porting/: lv_port_disp.c  lv_port_disp.h  lv_port_fs.c  lv_port_fs.h  lv_port_indev.c  lv_port_indev.h
手柄代码/lvgl/lvgl/src/: lv_conf_internal.h
手柄代码/lvgl/lvgl/src/core/: lv_event.h  lv_obj.h  lv_obj_style.h  lv_refr.c
手柄代码/lvgl/lvgl/src/extra/libs/gif/: gifdec.c  lv_gif.c
手柄代码/lvgl/lvgl/src/extra/widgets/msgbox/: lv_msgbox.c
手柄代码/lvgl/lvgl/src/widgets/: lv_img.h
接收机/: CMakeLists.txt  STM32F031C6_FLASH.ld  startup_gd32e230.s
接收机/CMSIS/Include/: core_cm23.h  gd32e23x.h
接收机/CMSIS/Source/: system_gd32e23x.c
接收机/Device_Drivers_Layer/: button_drv.cpp  si24r1_drv.cpp  si24r1_drv.h  si24r1_master_drv.cpp  si24r1_master_drv.h  si24r1_slave_drv.cpp  si24r1_slave_drv.h
接收机/GD32E23x_standard_peripheral/Source/: gd32e23x_cmp.c
接收机/Hardware_Abstraction_Layer/: exti_hal.cpp  exti_hal.h  gpio_hal.cpp  gpio_hal.h  pwm_hal.cpp  spi_hal.cpp  spi_hal.h  timer_hal.cpp  timer_hal.h  usart_hal.cpp  usart_hal.h
接收机/Software_Layer/: RingBuffer.cpp  RingBuffer.h  Software_Register.c  Software_Register.h  System_time.c  System_time.h
接收机/USER/: gd32e23x_it.c  main.c  main.cpp  main.h
